GNOME Bugzilla – Bug 768898
clutter: Fix typo in docs for ClutterActor::queue-relayout
Last modified: 2016-07-18 08:29:58 UTC
Trivial patch attached.
Created attachment 331642 [details] [review] clutter: Fix typo in docs for ClutterActor::queue-relayout Signed-off-by: Philip Withnall <philip.withnall@collabora.co.uk>
Review of attachment 331642 [details] [review]: LGTM.
Attachment 331642 [details] pushed as 40bbab8 - clutter: Fix typo in docs for ClutterActor::queue-relayout