clutter: Fix typo in docs for ClutterActor::queue-relayout

Signed-off-by: Philip Withnall <philip.withnall@collabora.co.uk>

https://bugzilla.gnome.org/show_bug.cgi?id=768898